[gd_scene load_steps=3 format=3 uid="uid://mjrdj64swlve"]

[ext_resource type="Script" uid="uid://tu44x7lwa7od" path="res://Scripts/PlayerMenu.gd" id="1_r4bku"]
[ext_resource type="PackedScene" uid="uid://vc428yl3fp1u" path="res://UI/ItemActionMenu.tscn" id="2_dxgqy"]

[node name="PlayerMenu" type="CanvasLayer"]
script = ExtResource("1_r4bku")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="FormationPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="AdjustButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel"]
layout_mode = 2
text = "编辑模式"

[node name="CombatPartyPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel/CombatPartyPanel"]
layout_mode = 2
text = "战斗编队"

[node name="CombatPartyGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel/CombatPartyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReservePartyPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel/ReservePartyPanel"]
layout_mode = 2
text = "后勤编队"

[node name="ReservePartyGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/FormationPanel/ReservePartyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="EquipmentPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterNameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/EquipmentPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortraitAndEquipment" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/EquipmentPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PortraitContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/EquipmentPanel/PortraitAndEquipment"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquipmentContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/EquipmentPanel/PortraitAndEquipment"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquipmentGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/EquipmentPanel/PortraitAndEquipment/EquipmentContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="StatsPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkillsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="SkillsTitle" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/HBoxContainer/SkillsContainer"]
layout_mode = 2
text = "技能"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillsGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/HBoxContainer/SkillsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="StatsTitle" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "属性"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/DetailPanel/StatsPanel/HBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Item"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemActionMenu" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/VBoxContainer" instance=ExtResource("2_dxgqy")]

[node name="InventoryGrid" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="InventoryHighlight" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/VBoxContainer"]
visible = false
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "关闭"
